--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,3 +43,30 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
+  build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+
+        with:
+          username: ${{ secrets.LOGIN_FOR_DOCKER }}
+          password: ${{ secrets.PASSWORD_FOR_DOCKER }}
+
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+
+          context: ./backend/
+
+          push: true
+
+          tags: seletach/kittygram_backend:v4
