--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -68,7 +68,7 @@ jobs:
           context: ./backend/
 
           push: true
-          tags: seletach/kittygram_backend:v4
+          tags: seletach/kittygram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -112,7 +112,7 @@ jobs:
           context: ./frontend/
           push: true
           
-          tags: seletach/kittygram_frontend:v4
+          tags: seletach/kittygram_frontend:latest
   
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
