--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,7 +13,7 @@ services:
       - pg_data:/var/lib/postgresql/data
   
   backend:
-    image: seletach/kittygram_backend:v4
+    image: seletach/kittygram_backend
     env_file: .env
     depends_on:
       - db
@@ -23,7 +23,7 @@ services:
   
   frontend:
     env_file: .env
-    image: seletach/kittygram_frontend:v4
+    image: seletach/kittygram_frontend
     depends_on:
       - backend
     command: cp -r /app/build/. /static/
