--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,7 @@ on:
       - main
 
 jobs:
+job1:
   tests:
     runs-on: ubuntu-latest
     services:
@@ -42,8 +43,7 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-
-jobs:
+job2:
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
