--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,8 @@ jobs:
     steps:
     - name: Starting flake8
       run: |
+        python -m pip install --upgrade pip
+        pip install -r ./backend/requirements.txt
         python -m flake8 backend/
 
   build_and_push_to_docker_hub:
