--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,9 +6,8 @@ on:
       - main
 
 jobs:
-  tests:
+  backend_tests:
     runs-on: ubuntu-latest
-    name: Backend tests
     services:
       postgres:
         image: postgres:13
@@ -31,12 +30,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./backend/requirements.txt
+
+    - name: Starting backend test
+      run: |
         cd backend/
         python manage.py test
 
   flake8:
-    runs-on: ubuntu-latest
     name: Test flake8
+    runs-on: ubuntu-latest
+    needs: backend_tests
     env:
       POSTGRES_USER: django_user
       POSTGRES_PASSWORD: django_password
@@ -44,7 +47,7 @@ jobs:
       DB_HOST: 127.0.0.1
       DB_PORT: 5432
     steps:
-    - name: Starting flake8
+    - name: flake8
       run: |
         python -m pip install --upgrade pip
         pip install -r ./backend/requirements.txt
@@ -53,7 +56,7 @@ jobs:
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: flake8
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
