--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,8 @@ jobs:
           POSTGRES_USER: django_user
           POSTGRES_PASSWORD: django_password
           POSTGRES_DB: django_db
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -37,17 +39,11 @@ jobs:
         python manage.py test
 
   flake8:
-    name: Test flake8
     runs-on: ubuntu-latest
     needs: backend_tests
-    env:
-      POSTGRES_USER: django_user
-      POSTGRES_PASSWORD: django_password
-      POSTGRES_DB: django_db
-      DB_HOST: 127.0.0.1
-      DB_PORT: 5432
+
     steps:
-    - name: flake8
+    - name: Starting flake8
       run: |
         python -m pip install --upgrade pip
         pip install -r ./backend/requirements.txt
