--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,13 @@ jobs:
     # needs: backend_tests
 
     steps:
+    - name: Check out code
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
