--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,41 +6,42 @@ on:
       - main
 
 jobs:
-  # backend_tests:
-  #   runs-on: ubuntu-latest
-  #   services:
-  #     postgres:
-  #       image: postgres:13
-  #       env:
-  #         POSTGRES_USER: django_user
-  #         POSTGRES_PASSWORD: django_password
-  #         POSTGRES_DB: django_db
-  #         DB_HOST: 127.0.0.1
-  #         DB_PORT: 5432
-  #       ports:
-  #         - 5432:5432
-  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-  #   steps:
-  #   - uses: actions/checkout@v3
+  backend_tests:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_password
+          POSTGRES_DB: django_db
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
     
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v4
-  #     with:
-  #       python-version: 3.9
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
 
-  #   - name: Install dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install -r ./backend/requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./backend/requirements.txt
 
-  #   - name: Starting backend test
-  #     run: |
-  #       cd backend/
-  #       python manage.py test
+    - name: Starting backend test
+      run: |
+        cd backend/
+        python manage.py test
 
   flake8:
     runs-on: ubuntu-latest
-    # needs: backend_tests
+    needs: backend_tests
 
     steps:
     - name: Check out code
