--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,12 +11,12 @@ jobs:
     services:
       postgres:
         image: postgres:13
-        env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_password
-          POSTGRES_DB: django_db
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
+        # env:
+        #   POSTGRES_USER: django_user
+        #   POSTGRES_PASSWORD: django_password
+        #   POSTGRES_DB: django_db
+        #   DB_HOST: 127.0.0.1
+        #   DB_PORT: 5432
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -62,7 +62,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./backend/requirements.txt
+        pip install -r ./backend/requirements.lint.txt
 
     - name: Starting flake8
       run: python -m flake8 backend/
