--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,5 +10,5 @@ pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 PyYAML==6.0
 python-dotenv==1.0.0
-flake8==6.0.0
-flake8-isort==6.0.0
+# flake8==6.0.0
+# flake8-isort==6.0.0
