--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,7 +62,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./backend/requirements.lint.txt
+        pip install -r ./backend/requirements/requirements.lint.txt
 
     - name: Starting flake8
       run: python -m flake8 backend/
