--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  tests:
+  backend_tests:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -15,11 +15,15 @@ jobs:
           POSTGRES_USER: django_user
           POSTGRES_PASSWORD: django_password
           POSTGRES_DB: django_db
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Check out code
+      uses: actions/checkout@v3
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -29,9 +33,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./backend/requirements.txt 
+        pip install -r ./backend/requirements.txt
 
-    - name: Test with flake8 and django tests
+    - name: Starting backend test
       env:
         POSTGRES_USER: django_user
         POSTGRES_PASSWORD: django_password
@@ -39,14 +43,34 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
-        python -m flake8 backend/
         cd backend/
         python manage.py test
+
+  flake8:
+    runs-on: ubuntu-latest
+    needs: backend_tests
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./backend/requirements/requirements.lint.txt
+
+    - name: Starting flake8
+      run: python -m flake8 backend/
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: flake8
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
