--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,23 +1,5 @@
 [settings]
-line_length = 120
-multi_line_output = 5
-lines_after_imports = -1
-include_trailing_comma = true
-use_parentheses = true
-skip =
-    drafts,
-    .git,
-    alembic
-skip_glob =
-    venv*,
-    .*
-default_section = THIRDPARTY
-known_starlite = starlite
-known_first_party = hackathon
-sections =
-    FUTURE,
-    STDLIB,
-    THIRDPARTY,
-    STARLITE,
-    FIRSTPARTY,
-    LOCALFOLDER
+profile = django
+; force_single_line = True
+known_django = django
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
