--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,11 +7,9 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir 
  
 COPY . .
- 
+
+RUN chmod +x /kittygram_final/backend/backend_static_script.sh
+
+ENTRYPOINT [ "./backend_static_script.sh" ]
+
 CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
-
-ADD ./backend_static_script.sh /kittygram_final/backend/
-
-RUN chmod +x ./backend_static_script.sh
-
-RUN ./backend_static_script.sh
