--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,7 +1,8 @@
 [settings]
 profile = django
-; force_single_line = True
+default_section = FIRSTPARTY
+known_first_party = /backend
 known_django = django
-sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+sections = FUTURE,STDLIB,DJANGO,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
 
 
