--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,8 +1,6 @@
 [settings]
 profile = django
 default_section = FIRSTPARTY
-known_first_party = /backend
+known_first_party = cats,kittygram_backend
 known_django = django
-sections = FUTURE,STDLIB,DJANGO,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
-
-
+sections =FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
