--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9 
- 
+
 WORKDIR /app 
  
 COPY requirements.txt . 
@@ -8,4 +8,6 @@ RUN pip install -r requirements.txt --no-cache-dir
  
 COPY . .
 
-CMD ["./backend_static_script.sh"]
+ENTRYPOINT [ "./backend_static_script.sh" ]
+
+CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
