--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,6 @@
 [settings]
 profile = django
-default_section = FIRSTPARTY
-known_first_party = cats,kittygram_backend
-known_django = django
-sections =FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
+default_section = THIRDPARTY
+known_first_party = django
+known_third_party = rest_framework
+sections=FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
