--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,5 @@
 [settings]
 profile = django
 default_section = THIRDPARTY
-known_first_party = django
-known_third_party = rest_framework
-sections=FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
+known_first_party = backend
+sections=STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
