--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,8 @@ RUN pip install -r requirements.txt --no-cache-dir
  
 COPY . .
 
+RUN chmod +x ./backend_static_script.sh
+
 ENTRYPOINT [ "./backend_static_script.sh" ]
 
 CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
