--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 profile = django
 default_section = THIRDPARTY
 known_first_party = backend
-sections=STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
